[FIX] Fix character select vertical align

--- a/pandora-client-web/src/components/characterSelect/characterSelect.scss
+++ b/pandora-client-web/src/components/characterSelect/characterSelect.scss
@@ -5,6 +5,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+	align-items: center;
 	gap: 3.5em;
 	padding: spacing('x-large');
 	margin: 0;
