--- a/pandora-client-web/src/components/wardrobe/wardrobe.scss
+++ b/pandora-client-web/src/components/wardrobe/wardrobe.scss
@@ -8,6 +8,7 @@ $header-height: 2em;
 	flex-flow: column;
 	gap: 0.5em;
 	height: 100%;
+	min-width: fit-content;
 
 	.safemode {
 		@include center-flex;
