--- a/pandora-client-web/src/index.scss
+++ b/pandora-client-web/src/index.scss
@@ -41,7 +41,6 @@ div.main-container {
 	& > * {
 		flex: 1;
 		padding: 1em;
-		min-width: fit-content;
 	}
 
 	& > footer {
